<?xml version="1.0" encoding="utf-8"?>
<!--保证通用性 所有子view 结构都是 relativelayout. linearlayout-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_relativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    tools:context="com.fupan.sxdial3.MainActivity">

<LinearLayout

    android:id="@+id/main_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="@drawable/main_bg"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"

            android:text="@string/app_name"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="V3.0" />
    </LinearLayout>

    <EditText
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_bg"
        android:hint="@string/account"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textCursorDrawable="@drawable/color_cursor" />

    <EditText
        android:id="@+id/pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_bg"
        android:hint="@string/pwd"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:textCursorDrawable="@drawable/color_cursor" />

    <Button
        android:id="@+id/dial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_bg"
        android:text="@string/dial"
        android:textColor="#ffffff"
        android:textSize="20sp" />


</LinearLayout>
</RelativeLayout>
