<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    tools:context="com.fupan.sxdial3.MainActivity">
        <LinearLayout
            android:id="@+id/setting_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/main_bg"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"

                    android:text="@string/action_settings"
                    android:textSize="35sp" />

                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="V3.0" />
            </LinearLayout>




            <EditText
                android:textColorHint="#5895fe"

                android:textColor="#000000"
                android:id="@+id/host"
                android:background="@drawable/edit_bg"
                android:hint="@string/host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/color_cursor"/>








            <EditText
                android:textColorHint="#5895fe"
                android:textColor="#000000"
                android:id="@+id/router_psw"
                android:background="@drawable/edit_bg"
                android:hint="@string/router_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/color_cursor"/>

            <Button
                android:id="@+id/save"
                android:background="@drawable/btn_bg"
                android:text="@string/save"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff"
                android:textSize="20sp"
                />



    </LinearLayout>
</RelativeLayout>